<resources>

    <string name="logo">Logo</string>

    <!--應用程式名稱-->
    <string name="app_name">圖書APP</string>
    <!--首頁-->
    <string name="search">查詢</string>
    <string name="scan">條碼掃描</string>

    <!--最新消息-->
    <string name="home">首頁</string>
    <string name="news_title">最新消息</string>
    <string name="personalBtn">個人書房</string>
    <string name="searchBtn">查詢館藏</string>
    <!--查詢館藏-->
    <string name="searchResult">查詢結果</string>
    <string name="book_info">書籍資訊</string>
    <!--書籍資訊-->
    <string name="sort">類別：</string>
    <string name="state">狀態：</string>
    <string name="comment_check">查看評論</string>
    <string name="borrow">借閱</string>
    <string name="content">書籍評論</string>
    <!--系統設定-->
    <string name="system_title">系統設定</string>
    <string name="ip">IP：</string>
    <string name="ip_empty">請輸入ip</string>
    <string name="port">PORT：</string>
    <string name="port_empty">請輸入port</string>
    <string name="system_empty">請輸入IP/PORT</string>
    <string name="format_err">格式錯誤</string>
    <string name="connect">連結測試</string>
    <!--登入-->
    <string name="inMem">登入會員</string>
    <string name="user">請輸入帳號</string>
    <string name="pass">請輸入密碼</string>
    <string name="register">註冊</string>
    <string name="forget">忘記密碼？</string>
    <string name="login">登入</string>
    <!--註冊-->
    <string name="register_title">註冊會員</string>
    <string name="account">帳號：</string>
    <string name="password">密碼：</string>
    <string name="person">真實姓名：</string>
    <string name="checkPw">確認密碼：</string>
    <string name="email">Email：</string>
    <string name="register_send">送出註冊</string>
    <string name="e_User_Pw">請輸入小寫英文與數字的組合，\n長度為8~12個字</string>
    <!--忘記密碼-->
    <string name="user_input">請輸入帳號</string>
    <string name="email_input">請輸入Email\n(EX：xxx@gamil.com)</string>
    <string name="send">送出</string>

    <!--個人書房-->
    <string name="personal_title">個人書房-主頁</string>
    <string name="count">筆</string>
    <string name="history">歷史紀錄</string>
    <string name="recording">借閱中書籍</string>
    <string name="no_record">無借閱書籍</string>
    <string name="comment_title">個人書房-評論</string>
    <string name="comment">評論</string>
    <string name="book_title">正在評論的書籍是：</string>
    <string name="comment_text">請寫下您對此書籍的評論或觀點</string>
    <string name="text_error_comment">最大長度限制：100個字</string>

    <!--系統維護-->
    <string name="defend_title">系統維護</string>
    <string name="id_manage">帳號管理</string>
    <string name="news_manage">消息管理</string>
    <string name="book_manage">書籍管理</string>
    <string name="borrow_list">借出清單</string>
    <string name="stock">書籍盤點</string>

    <!--帳號管理-->
    <string name="acc_manage">帳號</string>
    <string name="name_manage">名字</string>
    <string name="admin">管理員</string>
    <string name="member">會員</string>
    <string name="change">變更</string>
    <string name="delete">刪除</string>

    <!--消息管理-->
    <string name="news_add">＋新增消息</string>
    <string name="news_edit_title">消息管理-修改最新消息</string>

    <!--新增最新消息-->
    <string name="news_add_title">消息管理-新增最新消息</string>

    <!--書籍管理-->
    <string name="return_book">還書功能</string>
    <string name="new_book">手動新增書籍</string>
    <string name="isbn_scan">掃描條碼</string>
    <string name="edit_book_title">書籍管理-編輯書籍</string>
    <string name="x">×</string>
    <string name="info_btn">資訊類</string>
    <string name="language_btn">語文類</string>
    <string name="life_btn">生活類</string>

    <!--還書功能-->
    <string name="return_book_title">書籍管理-還書功能</string>
    <string name="isbn">請輸入ISBN條碼</string>
    <string name="submit_book">還書</string>
    <string name="name">請輸入還書人</string>

    <!--手動新增書籍-->
    <string name="update_book_title">書籍管理-新增書籍</string>
    <string name="book_id">書籍編號：</string>
    <string name="book_name">書名：</string>
    <string name="error_name">最大字數限制：30個字</string>
    <string name="author">作者：</string>
    <string name="error_auth">最大字數限制：20個字</string>
    <string name="book_isbn">ISBN：</string>
    <string name="error_isbn">最大字數限制：13個字</string>
    <string name="book_class">分類：</string>
    <string name="image">上傳圖片：</string>
    <string name="submit">確定</string>

    <!--ISBN掃描-->
    <string name="isbn_scan_title">書籍管理-掃描條碼</string>
    <string name="book_new">新增\n書籍</string>
    <string name="book_edit">修改\n書籍</string>
    <string name="book_delete">刪除\n書籍</string>

    <!--借出清單-->
    <string name="book_total">借出書籍總數：</string>
    <string name="borrow_self_title">借出清單-個人</string>
    <string name="number">數量</string>
    <string name="borrower">借閱人：</string>

    <!--修改密碼-->
    <string name="edit_title">修改密碼</string>
    <string name="oldPw">舊密碼：</string>
    <string name="newPw">新密碼：</string>
    <string name="newCkPw">確認密碼：</string>
    <string name="edit_send">送出修改</string>

</resources>
