<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_comment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.iii.library.Base.BookComment">

    <!--圖書管理app Logo-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"/>

    <!--標題：個人書房-評論-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00D0E8"
        android:text="@string/comment_title"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center" />

    <!--文字：書籍名稱-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/book_title"
        android:textColor="#000"
        android:textSize="25sp"
        android:gravity="center" />

    <!--文字：書籍名稱-->
    <TextView android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="25sp"
        android:textColor="#00F"
        android:gravity="center" />

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <!--輸入欄位：評論區-->
        <EditText android:id="@+id/text_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edt_bg"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:maxLength="101"
            android:maxLines="6"
            android:hint="@string/comment_text"/>
    </LinearLayout>
    <!--錯誤訊息：超過100個字-->
    <TextView android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:gravity="center"
        android:text="@string/text_error_comment"
        android:textSize="20sp"
        android:textColor="#F00"
        android:visibility="invisible"/>
    <!--按鈕：送出評論-->
    <Button android:id="@+id/send_btn"
        android:layout_weight="0.01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:padding="3dp"
        android:background="@drawable/radius"
        android:text="@string/send"/>

</LinearLayout>
