<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lend_list"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.iii.library.LibSystem.BorrowList">

    <!--標題：借出清單-->
    <TextView android:id="@+id/news_txv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00D0E8"
        android:text="@string/borrow_list"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center" />

    <!--書籍總數-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp">
        <!--文字：書籍總數-->
        <TextView android:id="@+id/book_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/book_total"
            android:textSize="25sp"
            android:textColor="#000"/>
        <!--數量-->
        <TextView android:id="@+id/book_total"
            android:layout_toEndOf="@+id/book_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#000"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_normal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/acc_manage"
            android:textSize="20sp"
            android:textColor="#000" />

        <TextView
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/name_manage"
            android:textSize="20sp"
            android:textColor="#000" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="20sp"
            android:textColor="#000" />

    </LinearLayout>

    <!--借閱者清單-->
    <ListView android:id="@+id/list"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

</LinearLayout>
