<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="org.iii.library.Base.Login">

    <!--圖書管理app Logo-->
    <ImageView
        android:layout_weight="0.8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"/>

    <!--標題：登入-->
    <TextView
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00D0E8"
        android:text="@string/inMem"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"
        android:maxLines="1" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <!--帳號欄位-->
        <EditText android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/user"
            android:textSize="25sp"
            android:gravity="center"
            android:inputType="text"/>

        <!--密碼欄位-->
        <EditText android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/pass"
            android:textSize="25sp"
            android:gravity="center"
            android:inputType="textPassword"/>

        <!--登入&註冊-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <!--登入按鈕-->
            <Button android:id="@+id/login_btn"
                android:layout_weight=".5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/radius"
                android:text="@string/login"
                android:textSize="20sp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--註冊按鈕-->
            <Button android:id="@+id/register_btn"
                android:layout_weight=".5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/radius"
                android:text="@string/register"
                android:textSize="20sp"/>
        </LinearLayout>

        <!--忘記密碼-->
        <TextView android:id="@+id/forget_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/forget"
            android:textSize="20sp"
            android:textColor="#00F"
            android:clickable="true" />


        <!--錯誤訊息-->
        <TextView android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#F00"/>

    </LinearLayout>



</LinearLayout>
