<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forget"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context="org.iii.library.LibSystem.Forget">

    <!--圖書管理app Logo-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/logo"/>

    <!--標題：忘記密碼-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00D0E8"
        android:text="@string/forget"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"
        android:maxLines="1" />

    <!--帳號欄位-->
    <EditText android:id="@+id/user"
        android:labelFor="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edt_bg"
        android:gravity="center"
        android:hint="@string/user_input"
        android:textSize="25sp"
        android:inputType="text"
        android:maxLength="12"
        android:maxLines="1"/>
    <!--帳號錯誤訊息-->
    <TextView android:id="@+id/error_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:layout_gravity="center" />

    <!--email欄位-->
    <EditText android:id="@+id/email"
        android:labelFor="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edt_bg"
        android:gravity="center"
        android:hint="@string/email_input"
        android:textSize="25sp"
        android:maxLines="1"
        android:inputType="textEmailAddress"/>

    <!--信箱錯誤訊息-->
    <TextView android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:layout_gravity="center"/>

    <!--登入按鈕-->
    <Button android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/radius"
        android:layout_marginTop="15dp"
        android:text="@string/send"
        android:textSize="25sp"/>

    <!--其他錯誤訊息-->
    <TextView android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:gravity="center" />

</LinearLayout>
