<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_manage"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="org.iii.library.LibSystem.NewsManage">

    <!--圖書管理app Logo-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"/>

    <!--標題：個人書房-評論-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00D0E8"
        android:text="@string/news_manage"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center" />
    <!--按鈕：新增最新消息-->
    <Button android:id="@+id/new_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:padding="3dp"
        android:background="@drawable/radius"
        android:text="@string/news_add"
        android:textSize="20sp" />

    <!--文字：最新消息-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="#000"/>

    <!--文字：最新消息-->
    <ListView android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
